--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "body-parser": "^1.18.2",
         "express": "^4.16.3",
+        "express-fileupload": "^0.4.0",
         "mongoose": "^5.0.14"
     },
     "devDependencies": {
