--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "author": "Samuel Alcaraz",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.18.2",
         "express": "^4.16.3",
         "express-fileupload": "^0.4.0",
+        "jsonwebtoken": "^8.2.1",
         "mongoose": "^5.0.14"
     },
     "devDependencies": {
