--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "body-parser": "^1.18.2",
         "express": "^4.16.3",
         "express-fileupload": "^0.4.0",
+        "hoek": "^5.0.3",
         "jsonwebtoken": "^8.2.1",
         "mongoose": "^5.0.14"
     },
